--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 html{
     font-size: 10px;
     font-family: 'Montserrat', sans-serif;
+    scroll-behavior: smooth;
 }
 
 a{
@@ -57,6 +58,7 @@ span{
     color: white;
     font-size: 2rem;
     text-transform: uppercase;
+    cursor: pointer;
 }
 
 /* Header Section Style */
@@ -115,6 +117,7 @@ span{
     text-transform: uppercase;
     display: block;
     margin-bottom: 10px;
+    transition: 2s ease;
 }
 
 #header .nav-list ul a:hover{
@@ -212,7 +215,7 @@ span{
 /* Hero Section Style */
 
 #hero{
-    background-image: url(./img/hero-bg.png);
+    background-image: url(./img/EncuadratE-1.jpg);
     background-size: cover;
     position: relative;
     background-position: top center;
@@ -337,7 +340,7 @@ span{
     left: 0;
     top: 0;
     background-color: black;
-    opacity: .6;
+    opacity: .7;
     position: absolute;
     width: 100%;
     height: 100%;
@@ -403,10 +406,30 @@ span{
        
 }
 
+#projects .remember-picture{
+    width: 100%;
+}
+
 #projects .project-info h1{
     font-size: 4rem;
     text-transform: uppercase;
     margin-bottom: 10px;
+}
+
+#projects .project-info span{
+    color: #007af3;
+}
+
+#projects .primary-cta{
+        background-color: #007af3;
+        padding: 1em;
+        text-decoration: none;
+        color: white;
+        font-size: 1.4em;
+        font-weight: bold;
+        display: inline-block;
+        border-radius: 5em;
+        margin-top: 20px;
 }
 
 #projects .project-info h2{
@@ -453,7 +476,7 @@ span{
 }
 
 #about .col-left img{
-    width: 250px;
+    width: 270px;
     height: 350px;
 }
 
@@ -469,6 +492,8 @@ span{
 
 #about .col-right p{
     margin-bottom: 10px;
+    font-size: 17px;
+    line-height: 1.5;
 }
 
 #about .col-right a{
